<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/item_event_main_padding"
    android:paddingRight="@dimen/item_event_main_padding"
    android:paddingTop="@dimen/item_event_main_padding">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_event_about_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/item_event_text_size"
        tools:text="Name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_event_start_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Start" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_event_end_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="End" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_event_line_height"
        android:layout_marginTop="@dimen/item_event_line_margin_top"
        android:background="@color/grey" />

</LinearLayout>